# asteroids

./: .gitignore  CMakeLists.txt
res/Heart/: Heart.aseprite
res/PlayerShip/: Player-Ship.aseprite
src/: components.hpp  constants.hpp  entities.hpp  helpers.hpp  main.cpp  systems.hpp
src/helpers/: game-state.hpp  helpers.hpp
src/systems/: asteroid-generator.hpp  game-init.hpp  systems.hpp
